# matrops

./: .gitignore  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  run_tests.py  setup.cfg
docs/: Documenation.md  Documentation.md
matrops/: __init__.py  __main__.py  exceptions.py
matrops/matrix/: Matrix.py  Operations.py  __init__.py
matrops/vector/: Operations.py  Vector.py  __init__.py
tests/: Info.md  __init__.py
tests/matrix/: test_matrix.py
tests/vector/: __init__.py  test_vector.py
utils/: random_number.py
