[metadata]
name = matrops
version = 0.0.2
author = Leonard Becker
description = Package for matrix and vector operations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jolumine/matrops
keywords = matrix, vector, operations, python, package
license = MIT
license_files = LICENSE


[options]
python_requires = >=3.7, <4
packages = find:
include_package_data = True 


